--- a/.babelrc
+++ b/.babelrc
@@ -2,5 +2,10 @@
     "presets": [
         "env",
         "react"
+    ],
+    "plugins": [
+        [
+            "transform-class-properties"
+        ]
     ]
 }
