--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "webpack-dev-server --mode development --open --hot",
     "build": "webpack --mode production",
     "test": "jest",
-    "test-watch": "jest --watchAll"
+    "test-watch": "jest --watchAll",
+    "test-coverage": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -49,8 +50,5 @@
   "dependencies": {
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
-  },
-  "jest": {
-    "setupTestFrameworkScriptFile": "<rootDir>setupTests.js"
   }
 }
