--- a/.prettierrc
+++ b/.prettierrc
@@ -6,5 +6,6 @@
   "semi": true,
   "bracketSpacing": true,
   "jsxBracketSameLine": false,
-  "arrowParens": "avoid"
+  "arrowParens": "avoid",
+  "singleQuote": true
 }
