--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,9 @@
     },
     "extends": [
         "eslint:recommended",
-        "plugin:react/recommended"
+        "plugin:react/recommended",
+        "prettier",
+        "prettier/react"
     ],
     "parser": "babel-eslint",
     "plugins": ["jest"],
